@@ -1,3 +1,9 @@
+2019-10-15  Segher Boessenkool  <segher@kernel.crashing.org>
+
+	PR rtl-optimization/92107
+	* genattrtab.c (write_attr_value) <do_operator>: Parenthesize the
+	expression written.
+
 2019-10-15  Iain Sandoe  <iain@sandoe.co.uk>
 
 	* config/darwin.c: Update description of fix and continue.
